{
    "name": "MainInputActions",
    "maps": [
        {
            "name": "MainMap",
            "id": "2b90f708-0aad-4796-8acc-d5af696e9554",
            "actions": [
                {
                    "name": "AimPosition",
                    "type": "Value",
                    "id": "40f4aeb8-b42f-4dc8-9b58-227a9b9a8a50",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchMain",
                    "type": "Button",
                    "id": "cb37c463-b695-4be3-95ea-3aadda45a33e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "1fa5adec-7fbc-4d22-a06a-eb44a769002c",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6b978d8-739f-4b10-865d-31e394a53aa4",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcbdeade-b518-43b5-ba3e-c066f389a963",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f80acb90-aed4-4c8d-9349-742fe6c6699d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}